--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.username=cqthuqchdq
-spring.datasource.password=Tutuga162
-spring.datasource.url=jdbc:mysql://testwebunitec23-3-server.mysql.database.azure.com?serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/testWebUnitec?serverTimezone=UTC
